crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R1_minus_R3.rs

use ladder_types::typenum_ladder::*;

fn main() {
   let _ = R1::new() - R3::new();
}
